# glow

./: .dockerignore  .gitignore  Dockerfile  build.sh  pyproject.toml
doc/: conf.py  getting-started.rst  index.rst
src/_glow/config/: __init__.py  config.py  conftest.py  parallel.py
src/_glow/connect/: __init__.py  connect.py  serial.py  shell.py  ssh.py
src/_glow/device/: Glow.py  conf.py  dev.py  pool.py
src/glow/: __init__.py  __main__.py
testing/: Dockerfile
testing/conf/: glow-xdist-1.toml  glow-xdist-2.toml  glow.toml
testing/testcases/connect/: test_bash.py  test_connect.py  test_fish.py
testing/testcases/dev/: test_load_dev.py
